client/src/plus/collections/v2/index.scss
@use "../../../ui/vars" as *;

.collections-v2 {
  padding: 1rem 0;

  & > header {
    padding: 1rem 0;

    &.container {
      align-items: baseline;
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;

      .collections-hero {
        background: linear-gradient(
          270deg,
          rgba(232, 8, 64, 0.05) 0%,
          rgba(232, 8, 64, 0.3) 100%
        );
        /* Light/Color/Icon/Critical */
        border: 1px solid var(--text-primary-red);
        display: grid;
        grid-template-rows: fit-content(12rem);
        margin: 1rem;
        width: 100%;

        .collections-hero-cta {
          grid-column: 1;
          grid-row: 1;
          padding: 1rem;

          h1 {
            font-size: 1.25rem;
            margin-right: 1rem;
          }

          p {
            display: block;
            flex: 100%;
          }
        }
      }

      .mandala-wrapper {
        grid-column: 1;
        grid-row: 1;
        overflow: hidden;
        top: 0;
        width: 100%;
        .mandala-container {
          --mandala-primary: var(--text-secondary);
        }
        .mandala-translate {
          @media screen and (max-width: $screen-md) {
            display: none;
          }

          @media screen and (min-width: $screen-md) {
            transform: scale(0.95) translate(24rem, -15.4rem);
          }
        }
      }

      & > * {
        margin-bottom: 1rem;
      }
    }

    .exit {
      flex: 100%;
      margin-top: -1rem;
    }

    h1 {
      font-size: 20px;
      margin-right: 1rem;
    }

    .count {
      color: var(--text-secondary);
    }

    p {
      color: var(--text-secondary);
      display: none;
      margin-top: 0;
    }

    @media screen and (min-width: $screen-md) {
      h1 {
        font-size: 24px;
      }

      .count {
        flex: 1;
      }

      p {
        display: block;
        flex: 100%;
      }
    }
  }

  & > .container {
    display: grid;
    gap: 1em;

    @media screen and (min-width: $screen-md) {
      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
    }
  }

  .notecard,
  .generic-loading {
    grid-column: 1/-1;
  }

  article {
    border: 1px solid var(--border-secondary);
    border-radius: var(--elem-radius);
    box-shadow: var(--shadow-02);
    display: flex;
    flex-direction: column;
    padding: 1em;

    &.default {
      background-color: var(--background-secondary);
    }

    header {
      align-items: start;
      display: grid;
      grid-template-columns: auto min-content;
    }

    h2 {
      align-self: center;
      font-size: var(--type-base-font-size-rem);
      line-height: var(--heading-line-height);
      margin: calc(
          (
              var(--form-elem-height) - var(--type-base-font-size-rem) *
                var(--heading-line-height)
            ) / 2
        )
        0;
      overflow-wrap: anywhere;

      a {
        color: var(--text-primary);
      }
    }

    .breadcrumbs {
      color: var(--text-secondary);
      font-size: var(--type-smaller-font-size);
      font-style: italic;
    }

    p {
      margin: 0;
    }

    footer {
      align-items: baseline;
      color: var(--text-secondary);
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      margin-top: auto;
      padding-top: 1rem;
    }

    time {
      font-size: var(--type-smaller-font-size);
    }

    @media screen and (max-width: $screen-md) {
      .count {
        display: none;
      }
    }
  }

  .pagination {
    grid-column: 1/-1;
  }
}

